[package]
name = "rbuster"
description = "Brute force directories and files names on web/application servers."
repository = "https://github.com/smirnovvad/rbuster"
keywords = ["bruteforce", "dirbuster", "ctf", "fuzz"]
categories = ["bruteforce"]
license = "MIT"
version = "0.1.0"
authors = ["Vadim Smirnov <smirnovvad7@gmail.com>"]

[dependencies]
reqwest = "0.8"
rayon = "1.0"
quicli = "0.3"
