[package]
name = "rbuster"
description = "Brute force directories and files names on web/application servers."
repository = "https://github.com/smirnovvad/rbuster"
keywords = ["bruteforce", "dirbuster", "ctf", "fuzz"]
categories = ["command-line-utilities", "parsing", "web-programming"]
license = "MIT"
readme = "README.md"
version = "0.1.2"
authors = ["Vadim Smirnov <smirnovvad7@gmail.com>"]

[badges]
travis-ci = { repository = "smirnovvad/rbuster", branch = "master" }
maintenance = { status = "as-is" }

[dependencies]
reqwest = "0.8"
rayon = "1.0"
quicli = "0.3"
