[package]
name = "rbuster"
description = "Brute force directories and files names on web/application servers."
repository = "https://github.com/smirnovvad/rbuster"
keywords = ["bruteforce", "dirbuster", "ctf", "fuzz"]
categories = ["command-line-utilities", "parsing", "web-programming"]
license = "MIT"
readme = "README.md"
version = "0.2.1"
authors = ["Vadim Smirnov <smirnovvad7@gmail.com>"]
edition="2018"

[badges]
travis-ci = { repository = "smirnovvad/rbuster", branch = "master" }
maintenance = { status = "as-is" }

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
quicli = "0.4"
structopt = "0.2"
nanoid = "0.2.0"
futures = "0.3.10"
